[package]
name = "rrpack"
version = "0.0.1"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rrpack"
homepage = "https://github.com/rillrate/rrpack"
documentation = "https://docs.rs/rrpack/"
license = "BUSL-1.1"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Core types for packs of the rillrate."

[dependencies]
